# hue-controller

./: .gitignore  anonuevo.py  anonuevo2.py  app_hue.py  app_hue10.py  app_hue11.1.py  app_hue11.2.py  app_hue11.3.py  app_hue11.4.py  app_hue11.5.py  app_hue11.6.py  app_hue11.7.py  app_hue12.1.py  app_hue12.2.py  app_hue12.3.py  app_hue12.4.py  app_hue12.5.py  app_hue12.6.py  app_hue2.py  app_hue3.py  app_hue4.py  app_hue5.py  app_hue6.py  app_hue7.py  app_hue8.py  app_hue9.py  build_linux.sh  diagnostico.py  hue.py  io.github.mgatto98.SistemaHue.desktop  io.github.mgatto98.SistemaHue.metainfo.xml  io.github.mgatto98.SistemaHue.yml  io.github.pipio.SistemaHue.desktop  io.github.pipio.SistemaHue.yml  lg.py  listaluces.py  navidad.py  prue1.py  prueba.py  python3-deps.json  (+7 more)
.github/workflows/: snap.yml
huecontroller/: CHANGELOG  LICENSE  README.rst  pyproject.toml  requirements.txt
huecontroller/src/huecontroller/: __main__.py  app.py
snap/: snapcraft.yaml
snap/local/: launcher.sh
