[build-system]
requires = ["briefcase"]
build-backend = "briefcase"

[project]
name = "huecontroller"
version = "1.0.0"
description = "Control de luces Philips Hue"
authors = [{name = "Mauricio Edgardo Gatto", email = "mgatto98@hotmail.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "phue==1.1",
    "toga==0.4.8",
    "travertino==0.3.0",
    "gbulb==0.6.6"
]
license = {file = "LICENSE"}

[tool.briefcase]
project_name = "Philips Hue Controller"
bundle = "com.tunombre.huecontroller"
version = "1.0.0"
url = "https://github.com/mgatto98/huecontroller"
author = "Mauricio Edgardo Gatto"
author_email = "mgatto98@hotmail.com"

[tool.briefcase.app.huecontroller]
formal_name = "Philips Hue Controller"
description = "Control de luces Philips Hue"
sources = ["src/huecontroller"]
requires = [
    "phue==1.1",
    "toga==0.4.8",
    "travertino==0.3.0",
    "gbulb==0.6.6"
]

[tool.briefcase.app.huecontroller.linux]
system_requires = [
    "python3-gi",
    "python3-gi-cairo",
    "gir1.2-gtk-3.0"
]

[tool.briefcase.app.huecontroller.linux.debian]
system_requires = [
    "python3-gi",
    "python3-gi-cairo",
    "gir1.2-gtk-3.0"
]

